--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -98,8 +98,9 @@ p a {
   font-size: 20px;
 }
 #explore img {
-  width: 35px;
-  height:35px;
+  width: 30px;
+  height:30px;
+  margin-left: 5px;
   /* height: 10%; */
   
   /* position: absolute; */
@@ -200,8 +201,8 @@ dialog {
 		border: none;
 		background: none;
 		position: absolute;
-		top: 90px;
-		right: 20px;
+		top: 200px;
+		right: 10px;
 		transition: ease filter, transform 0.3s;
 		cursor: pointer;
 		transform-origin: center;
@@ -255,8 +256,8 @@ button.primary {
 #search{
   width:40%;
   height:30px;
+  margin: 20px 0px 30px 0px;
 }
-#cityname{
-  width:80%;
-  height:30px;
-}
+
+
+
