--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -17,7 +17,7 @@ img {
   position: absolute;
   top: 100px;
   margin-left: 180px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   align-items: center;
 }
 #nav div {
@@ -40,7 +40,7 @@ button {
   border: none;
   background-color: #011e3f;
   color: white;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   cursor: pointer;
 }
 #center {
@@ -51,7 +51,7 @@ button {
   text-align: center;
 }
 #center h1 {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 60px;
 }
 #center > h1:nth-child(2) {
@@ -64,12 +64,12 @@ button {
 }
 button a {
   text-decoration: none;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: white;
 }
 p a {
   text-decoration: none;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: black;
 }
 #explore {
@@ -99,10 +99,10 @@ p a {
 }
 #explore img {
   width: 30px;
-  height:30px;
+  height: 30px;
   margin-left: 5px;
   /* height: 10%; */
-  
+
   /* position: absolute; */
 }
 #explore > div:nth-child(2) {
@@ -148,116 +148,241 @@ p a {
 
 .pgray {
   padding-left: 20px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #c5ccd4;
 }
 .pcolor {
   padding-left: 20px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #383d93;
   margin-top: -12px;
 }
 
-input[type="date"]{
-  background-color:transparent;
+input[type="date"] {
+  background-color: transparent;
   border: none;
   /* color:transparent;
    */
   width: 50px;
-  height:50px;
+  height: 50px;
   cursor: pointer;
 }
-#datetext{
-height:20px;
-width:120px
+#datetext {
+  height: 20px;
+  width: 120px;
 }
-#price{
-  height:20px;
-  width:140px;
-  }
- #city{
-    height:20px;
-    width:150px
-    }
-
+#price {
+  height: 20px;
+  width: 140px;
+}
+#city {
+  height: 20px;
+  width: 150px;
+}
 
 dialog {
-	padding: 1rem 3rem;
-	background: white;
-	max-width: 400px;
-	padding-top: 2rem;
-	border-radius: 20px;
-	border: 0;
-	box-shadow: 0 5px 30px 0 rgb(0 0 0 / 10%);
-	animation: fadeIn 1s ease both;
-	&::backdrop {
-		animation: fadeIn 1s ease both;
-		background: rgb(255 255 255 / 40%);
-		z-index: 2;
-		backdrop-filter: blur(20px);
-	}
-	.x {
-		filter: grayscale(1);
-		border: none;
-		background: none;
-		position: absolute;
-		top: 200px;
-		right: 10px;
-		transition: ease filter, transform 0.3s;
-		cursor: pointer;
-		transform-origin: center;
-		&:hover {
-			filter: grayscale(0);
-			transform: scale(1.1);
-		}
-	}
-	h2 {
-		font-weight: 600;
-		font-size: 2rem;
-		padding-bottom: 1rem;
-	}
-	p {
-		font-size: 1rem;
-		line-height: 1.3rem;
-		padding: 0.5rem 0;
-		a {
-			&:visited {
-				color: rgb(var(--vs-primary));
-			}
-		}
-	}
+  padding: 1rem 3rem;
+  background: white;
+  width: 200px;
+  max-width: 400px;
+  padding-top: 2rem;
+  border-radius: 20px;
+  border: 0;
+  box-shadow: 0 5px 30px 0 rgb(0 0 0 / 10%);
+  animation: fadeIn 1s ease both;
+  &::backdrop {
+    animation: fadeIn 1s ease both;
+    background: rgb(255 255 255 / 40%);
+    z-index: 2;
+    backdrop-filter: blur(20px);
+  }
+  .x {
+    filter: grayscale(1);
+    border: none;
+    background: none;
+    position: absolute;
+    top: 200px;
+    right: 10px;
+    transition: ease filter, transform 0.3s;
+    cursor: pointer;
+    transform-origin: center;
+    &:hover {
+      filter: grayscale(0);
+      transform: scale(1.1);
+    }
+  }
+  h2 {
+    font-weight: 600;
+    font-size: 2rem;
+    padding-bottom: 1rem;
+  }
+  p {
+    font-size: 1rem;
+    line-height: 1.3rem;
+    padding: 0.5rem 0;
+    a {
+      &:visited {
+        color: rgb(var(--vs-primary));
+      }
+    }
+  }
 }
 
 button.primary {
-	display: inline-block;
-  width:30px;
-	font-size: 0.8rem;
-	color: #680f0f;
-	background: rgb(var(--vs-primary) / 100%);
-	padding-left:  -20px;
-	border-radius: 17px;
-	transition: background-color 0.1s ease;
-	box-sizing: border-box;
-	transition: all 0.25s ease;
-	border: 0;
-	cursor: pointer;
+  display: inline-block;
+  width: 30px;
+  font-size: 0.8rem;
+  color: #680f0f;
+  background: rgb(var(--vs-primary) / 100%);
+  padding-left: -20px;
+  border-radius: 17px;
+  transition: background-color 0.1s ease;
+  box-sizing: border-box;
+  transition: all 0.25s ease;
+  border: 0;
+  cursor: pointer;
   margin-left: -25px;
 }
 
 @keyframes fadeIn {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 1;
-	}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
-#search{
-  width:40%;
-  height:30px;
+#search {
+  width: 40%;
+  height: 30px;
   margin: 20px 0px 30px 0px;
 }
 
+@media screen and (min-width: 701px) and (max-width: 1100px) {
+  #nav {
+    width: 85%;
+    top: 55px;
+    margin-left: 80px;
+  }
+  #nav div {
+    gap: 20px;
+  }
+  #disc {
+    display: none;
+  }
+  #commu {
+    display: none;
+  }
+  button {
+    width: 80px;
+    height: 35px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #center {
+    top: 95px;
+    margin-left: 340px;
+  }
+  #center h1 {
+    font-size: 52px;
+  }
+  #explore {
+    top: 355px;
+    margin-left: 200px;
+  }
 
+  #explore > div:nth-child(1) > button {
+    height: 60px;
+  }
+  #explore > div:nth-child(1) > button > p {
+    font-size: 15px;
+  }
+  #explore p {
+    font-size: 12px;
+    padding-top: 5px;
+  }
+}
 
+@media screen and (max-width: 700px) {
+  #nav {
+    width: 85%;
+    top: 32px;
+    margin-left: 40px;
+  }
+  #nav div {
+    gap: 20px;
+  }
+  #deal {
+    display: none;
+  }
+  #disc {
+    display: none;
+  }
+  #commu {
+    display: none;
+  }
+  h2 {
+    font-size: 16px;
+  }
+  p {
+    font-size: 10px;
+    margin-left: -10px;
+  }
+  button {
+    width: 60px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #center {
+    height: 130px;
+    top: 90px;
+    margin-left: 215px;
+  }
+  #center h1 {
+    font-size: 27px;
+  }
+  #h1 {
+    padding-top: 35px;
+  }
+  #center p {
+    font-size: 10px;
+  }
+  #explore {
+    top: 210px;
+    margin-left: 120px;
+  }
+
+  #explore > div:nth-child(1) > button {
+    height: 45px;
+    margin-top: 15px;
+  }
+  #explore > div:nth-child(1) > button > p {
+    font-size: 10px;
+  }
+  #explore p {
+    font-size: 9px;
+    padding-top: 10px;
+  }
+  #explore img {
+    width: 15px;
+    height: 15px;
+    padding-left: 5px;
+  }
+  #explore > div:nth-child(2) > div:nth-child(1) {
+    height: 50%;
+    margin-top: 17px;
+  }
+  #explore > div:nth-child(3) > div:nth-child(1) {
+    height: 50%;
+    margin-top: 17px;
+  }
+  #explore > div:nth-child(4) > div:nth-child(1) {
+    height: 50%;
+    margin-top: 17px;
+  }
+}
