--- a/styles/log-in.css
+++ b/styles/log-in.css
@@ -2,8 +2,7 @@
   margin: 0px;
   padding: 0px;
   width: 100%;
-  font-family: 'Poppins', sans-serif;
-  
+  font-family: "Poppins", sans-serif;
 }
 
 img {
@@ -49,7 +48,7 @@ h2 {
   padding: 0;
   margin: 0;
   text-align: right;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #3a4f64;
 }
 
@@ -83,14 +82,14 @@ label {
   color: #9da897;
   text-transform: uppercase;
   font-size: 0.8em;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 #button {
   width: 50%;
   height: 45px;
   background-color: #9da897;
   color: white;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   padding-top: 3px;
   font-size: 20px;
   margin: 40px 0px 0px 150px;
@@ -99,7 +98,35 @@ label {
   background-color: #596950;
   cursor: pointer;
 }
-#text{
+#text {
   color: #3a4f64;
   text-align: right;
+}
+
+@media screen and (min-width: 701px) and (max-width: 1100px) {
+  img {
+    width: 75%;
+    margin: 70px 0px 0px 140px;
+  }
+  #box {
+    width: 75%;
+  }
+}
+@media screen and (max-width: 700px) {
+  #second {
+    display: none;
+  }
+  #box {
+    margin: 70px -5px 0px 130px;
+  }
+  #first {
+    width: 100%;
+  }
+  form {
+    width: 250px;
+  }
+  #button {
+    height: 35px;
+    margin-left: 120px;
+  }
 }
