--- a/styles/explore.css
+++ b/styles/explore.css
@@ -1,14 +1,213 @@
+* body {
+  margin: 0px;
+  padding: 0px;
+}
+
 #container {
-    margin: auto;
-    background-color: #3a4f64;
-    margin-top: 100px;
+  margin: auto;
+  padding-top: 50px;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  background-color: #9da896;
+}
+#imgdiv {
+  width: 85%;
+  box-sizing: border-box;
+  margin: auto;
+  padding: 10px 0px 0px 50px;
+  background-color: #3a4f64;
+}
+#container > div > img {
+  width: 95%;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+h3 {
+  text-align: end;
+  padding-right: 65px;
+  color: #9da896;
+}
+#hotels {
+  width: 85%;
+  box-sizing: border-box;
+  background-color: #3a4f64;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: auto;
+  gap: 20px;
+  padding: 5%;
+  margin: auto;
+}
+#hotels img {
+  width: 100%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+#hotels > div {
+  margin: auto;
+  width: 90%;
+  background-color: #9da896;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+#hotels > div:hover {
+  transition: 1s;
+  transform: scale(1.03);
+}
+#hotels div > h4 {
+  background-color: white;
+  width: 70%;
+  color: #3a4f64;
+  padding-left: 10px;
+  height: 30px;
+}
+#hotels div > h5 {
+  background-color: white;
+  width: 50%;
+  color: #3a4f64;
+  padding-left: 10px;
+}
+#hotels div > p {
+  background-color: white;
+  width: 30%;
+  color: #3a4f64;
+  padding-left: 10px;
+}
+#hotels div > button {
+  border: none;
+  color: white;
+  width: 30%;
+  height: 40px;
+  background-color: #3a4f64;
+  font-family: "Poppins", sans-serif;
+  margin-bottom: 20px;
+}
+#hotels div > button:hover {
+  cursor: pointer;
+  background-color: #122f4d;
+}
+#center {
+  width: 85%;
+  margin: auto;
+  box-sizing: border-box;
+  background-color: #3a4f64;
+  margin-top: -20px;
+  padding-top: 50px;
+}
+#bar {
+  width: 82%;
+  background-color: white;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+#bar div {
+  display: flex;
+}
+#bar p {
+  color: #3a4f64;
+}
+#search {
+  width: 150px;
+  height: 27px;
+  margin: 13px 0px 0px 20px;
+}
+#search:hover {
+  background-color: #dfe0e1;
+}
+
+#filter {
+  width: 120px;
+  height: 27px;
+  margin: 15px 0px 0px 20px;
+}
+#filter:hover {
+  background-color: #dfe0e1;
+}
+#sort {
+  width: 120px;
+  height: 27px;
+  margin: 15px 0px 0px 20px;
+}
+#sort:hover {
+  background-color: #dfe0e1;
+}
+
+#bar button {
+  width: 200px;
+  height: 60px;
+  background-color: #3a4f64;
+  color: white;
+  border: none;
+}
+#bar button p {
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-size: 17px;
+}
+a {
+  text-decoration: none;
+}
+
+@media screen and (min-width: 701px) and (max-width: 1100px) {
+  img {
+    width: 75%;
   }
-  #imgdiv {
-      width:80%;
-      margin: auto;
-      background-color: #596950;
-    
+
+  #hotels {
+    grid-template-columns: repeat(2, 1fr);
   }
-  #container > div > img {
-    width: 100%;
+
+  #search {
+    width: 90px;
+    height: 22px;
+    margin-left: 5px;
   }
+  #filter {
+    width: 90px;
+    height: 22px;
+    margin-left: 10px;
+  }
+  #sort {
+    width: 90px;
+    height: 22px;
+    margin-left: 5px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  img {
+    width: 75%;
+  }
+
+  #hotels {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  #hotels div {
+    width: 60%;
+  }
+  #search {
+    width: 70px;
+    height: 20px;
+    margin-left: 2px;
+  }
+  #filter {
+    width: 70px;
+    height: 20px;
+    margin-left: 2px;
+  }
+  #sort {
+    width: 70px;
+    height: 20;
+    margin-left: 2px;
+  }
+  #bar button {
+    display: none;
+  }
+}
